# vehicle-ai-damage-inspection

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: train.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  model_checkpoint.yaml
configs/data/: instance_damage_detection.yaml  semantic_vehicle_parts.yaml
configs/experiment/: deeplabv3plus.yaml  instance_mask2former.yaml  segformer.yaml  semantic_mask2former.yaml  unet.yaml
configs/extras/: default.yaml
configs/logger/: many_loggers.yaml  mlflow.yaml  tensorboard.yaml
configs/model/: deeplabv3plus.yaml  mask2former_instance.yaml  mask2former_semantic.yaml  segformer.yaml  unet.yaml
configs/trainer/: default.yaml
notebooks/: 02-eda-car-parts-segmentation.ipynb
scripts/: export_to_onnx.py
src/: train.py
src/data/: instance_datamodule.py  semantic_datamodule.py
src/data/components/: instance_dataset.py  semantic_dataset.py
src/export/: onnx_exporter.py
src/models/: instance_module.py  semantic_module.py
src/models/components/instance/: mask2former.py
src/models/components/semantic/: deeplabv3plus.py  mask2former.py  segformer.py  unet.py
src/utils/: instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: conftest.py  test_export.py
tests/data/: conftest.py  test_instance_datamodule.py  test_semantic_datamodule.py
tests/data/components/: test_instance_dataset.py  test_semantic_dataset.py
tests/models/: conftest.py
tests/models/components/instance/: test_mask2former.py
tests/models/components/semantic/: test_deeplabv3plus.py  test_mask2former.py  test_segformer.py  test_unet.py
